# loogle-rs

./: .env  .gitignore  .loogle.zst  Cargo.toml  index.html  test.html
data_dir/: firstfile.txt
src/: lib.rs  main.rs  model.rs  server.rs  templates.rs
templates/: history.html  results.html
